# ShorelarkCpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGES_SUMMARY.md  CMakeLists.txt  Doxyfile  LICENSE  MESON_BUILD_FIXES.md  MESON_STATUS.md  QUICK_BUILD_GUIDE.md  README.md  conanfile.py  meson.build  meson_options.txt
.cursor/rules/: automation.mdc  build.mdc  documentation.mdc  error_handling.mdc  genetic_algorithm.mdc  git.mdc  naming.mdc  neural_network.mdc  performance.mdc  project.mdc  quality.mdc  style.mdc  ui.mdc
.github/instructions/: catch2_testing.instructions.md  cmake_practices.instructions.md  conan2_package_management.instructions.md  cpp17_features.instructions.md  cpp20_features_in_cpp17.instructions.md  kiss_dry_principles.instructions.md  solid_principles.instructions.md  spdlog_logging.instructions.md
.github/workflows/: build.yml  code-quality.yml  documentation.yml  security.yml
apps/: CMakeLists.txt  meson.build
apps/optimizer_cli/: CMakeLists.txt  meson.build
apps/optimizer_cli/src/: analyze.cc  analyze.h  cli_args.cc  cli_args.h  common.h  constants.h  main.cc  simulate.cc  simulate.h
apps/optimizer_cli/test/: analyze_test.cc  config_test.cc  optimizer_test.cc  simulate_test.cc
apps/simulation_ui/: CMakeLists.txt  meson.build
apps/simulation_ui/src/: ImFileDialog.cpp  ImFileDialog.h  app.cc  app.h  imgui_context.cc  imgui_context.h  main.cc  simulation_config.cc  simulation_config.h  simulation_window.cc  simulation_window.h
apps/simulation_ui/test/: simulation_config_test.cc
docs/: Doxyfile.in
docs/sphinx/: conf.py  index.rst
include/: version.hpp
libs/: CMakeLists.txt  meson.build
libs/genetic_algorithm/: CMakeLists.txt  meson.build
libs/genetic_algorithm/include/genetic_algorithm/: chromosome.h  crossover.h  genetic_algorithm.h  genetic_error.h  individual.h  mutation.h  selection.h  statistics.h
libs/genetic_algorithm/src/: chromosome.cc  crossover.cc  genetic_algorithm.cc  individual.cc  mutation.cc  selection.cc
libs/genetic_algorithm/test/: chromosome_test.cc  crossover_test.cc  genetic_algorithm_test.cc  individual_test.cc  mutation_test.cc  selection_test.cc  statistics_test.cc  test_individual.h
libs/neural_network/: CMakeLists.txt  Doxyfile  README.md  meson.build
libs/neural_network/include/neural_network/: activation.h  layer.h  layer_topology.h  network.h  neural_network.h  neuron.h
libs/neural_network/src/: layer.cc  network.cc  neuron.cc
libs/neural_network/test/: activation_test.cc  layer_test.cc  network_test.cc  neuron_test.cc  random_test.cc
libs/optimizer/: meson.build
libs/random/: CMakeLists.txt  meson.build
libs/random/include/random/: random.h
libs/random/test/: random_test.cc
libs/simulation/: CMakeLists.txt  meson.build
libs/simulation/include/simulation/: animal.h  animal_individual.h  brain.h  config.h  constants.h  eye.h  food.h  simulation.h  simulation_error.h  statistics.h  vector2d.h  world.h
libs/simulation/src/: animal.cc  animal_individual.cc  brain.cc  eye.cc  food.cc  simulation.cc  simulation_error.cc  statistics.cc  world.cc
libs/simulation/test/: animal_individual_test.cc  animal_test.cc  brain_test.cc  config_test.cc  eye_test.cc  food_test.cc  statistics_test.cc  vector2d_test.cc  world_test.cc
tools/: generate_compile_db.py
