project('cshorelark', 'cpp',
    version : '1.0.0',
    default_options : [
        'cpp_std=c++17',
        'warning_level=2',
        'werror=false'
    ]
)

# Find clang-format and clang-tidy
clang_format = find_program('clang-format', required : false)
clang_tidy = find_program('clang-tidy', required : false)

# Note: clang-format and clang-tidy targets are available but require manual file listing
# or IDE integration on Windows. On Linux/macOS, you can add custom targets with file globbing.

# Find documentation tools if enabled
if get_option('build_docs')
    doxygen = find_program('doxygen', required : true)
    sphinx = find_program('sphinx-build', required : true)
    
    # Configure Doxygen
    conf_data = configuration_data()
    conf_data.set('PROJECT_NAME', 'CShorelark')
    conf_data.set('PROJECT_VERSION', meson.project_version())
    conf_data.set('OUTPUT_DIRECTORY', meson.current_build_dir() / 'docs/api')
    conf_data.set('GENERATE_HTML', 'YES')
    conf_data.set('GENERATE_XML', 'YES')
    
    doxyfile = configure_file(
        input : 'Doxyfile.in',
        output : 'Doxyfile',
        configuration : conf_data
    )
    
    # Doxygen target
    custom_target('doxygen',
        output : 'doxygen',
        command : [doxygen, doxyfile],
        build_by_default : true
    )
    
    # Sphinx target
    custom_target('sphinx',
        output : 'sphinx',
        command : [
            sphinx,
            '-b', 'html',
            '-Dbreathe_projects.CShorelark=' + meson.current_build_dir() / 'docs/api/xml',
            meson.current_source_dir() / 'docs/sphinx',
            meson.current_build_dir() / 'docs/sphinx'
        ],
        depends : 'doxygen',
        build_by_default : true
    )
endif

# Conan-provided dependencies
# These will be provided via the pkg-config files generated by Conan
fmt_dep = dependency('fmt', required: true)
spdlog_dep = dependency('spdlog', required: true)
date_dep = dependency('date', required: true)
ranges_v3_dep = dependency('range-v3', required: true)
span_lite_dep = dependency('span-lite', required: true)
tl_expected_dep = dependency('tl-expected', required: true)
tl_optional_dep = dependency('tl-optional', required: false)
imgui_dep = dependency('imgui', required: true)
catch2_dep = dependency('catch2', required: true)

# Common include directories
inc = include_directories('include')

# Subprojects
subdir('libs')
subdir('apps')